[package]
name = "wallpaper-rs"
version = "0.1.0"
edition = "2021"

[features]
daemon = []

[dependencies]
image = "0.24.7"
regex = "1.9.4"
reqwest = { version = "0.11", features = ["blocking"] }

[dependencies.windows]
version = "0.51.1"
features = [
    "Storage",
    "Foundation",
    "System_UserProfile",
    "Win32_UI_Shell",
    "Win32_System_Com",
]
