[package]
name = "wallpaper-rs"
version = "0.1.1"
edition = "2021"

[features]
daemon = []

[dependencies]
image = "0.25"
regex = "1.10"
reqwest = { version = "0.12", features = ["blocking"] }

[dependencies.windows]
version = "0.51"
features = [
    "Storage",
    "Foundation",
    "System_UserProfile",
    "Win32_UI_Shell",
    "Win32_System_Com",
]
